--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,4 +10,7 @@
     <% end %>
 </ul>
            <!-- class: 'new_article' adds html attribute class=new_article -->
-<%= link_to "Create a New Article", new_article_path, class: "new_article" %>
+<% if logged_in? %>
+    <%= link_to "Create a New Article", new_article_path, class: "new_article" %>
+<% end %>
+
